--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,7 +4,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 $background-color: #4e4e4e;
 $font-color: #73AD21;
 $white: #fff;
-
+// rgb(233, 29, 99) pink
+// rgb(0, 144, 172) blue
 body {
   background-color: $background-color;
   color: $font-color;
