--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,17 +1,14 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-$background-color: #4e4e4e;
-$font-color: #73AD21;
+$background-color: rgb(0, 144, 172);
+$font-color: #fff;
 $white: #fff;
 // rgb(233, 29, 99) pink
 // rgb(0, 144, 172) blue
 body {
   background-color: $background-color;
   color: $font-color;
-}
-header {
-  color: #73AD21;
 }
 .authforms {
   clear: both;
