--- a/assets/scripts/templates/beer_listing.handlebars
+++ b/assets/scripts/templates/beer_listing.handlebars
@@ -1,32 +1,36 @@
-<!-- {{#each books as |book|}}
 
-  {{> partial}}
-  Don't uncomment yet
-
- <!-- Developers, why are we using data-id and not just id? -->
-  <!-- <h1 data-id="{{book.id}}"> <small>Title: {{book.title}}</small></h1>
-  <div>
-    {{#if book.description}}
-      {{book.description}}
+{{#each beers as |beer|}}
+<h3> <small>{{beer.name}}</h3>
+<ul class="listbeer" data-id="{{beer.id}}">
+  <li>
+    {{#if beer.brand}}
+      <li>Brand: {{beer.brand}}</li>
     {{else}}
-      No description.
-    {{/if}}
-  </div>
-
-{{/each}} --> -->
-
-{{#each books as |book|}}
-<ul class="listbook" data-id="{{book.id}}">
-  <li> <small>Title: {{book.title}}</small>
-    {{#if book.description}}
-      <li>{{book.description}}</li>
-    {{else}}
-      No description.
+      No brand.
     {{/if}}
   </li>
   <li>
-    <button class="remove" data-id="{{book.id}}">Remove</button>
+    {{#if beer.style}}
+      <li>Style: {{beer.style}}</li>
+    {{else}}
+      No style.
+    {{/if}}
+  </li>
+  <li>
+    {{#if beer.alc}}
+      <li>Alc Content: {{beer.alc}}</li>
+    {{else}}
+      Alc content unknown.
+    {{/if}}
+  </li>
+  <li>
+    {{#if beer.price}}
+      <li>Price: {{beer.price}}</li>
+    {{else}}
+      Price unknown.
+    {{/if}}
   </li>
 </ul>
-  <button class="remove" data-id="{{book.id}}">Remove</button>
+  <button class="openBeerUpdate" data-id="{{beer.id}}">Update</button>
+  <button class="deleteBeer" data-id="{{beer.id}}">Delete</button>
 {{/each}}
