UI bug fixes updates Added hide/show for addBeer for on sign/out updated button styling to make it more consistent Updated beer list title added styling added hide/show on signin

--- a/assets/scripts/templates/beer_delete.handlebars
+++ b/assets/scripts/templates/beer_delete.handlebars
@@ -1,5 +1,5 @@
 
 <div class="deleteBeerConfirm" data-id="{{beer.id}}">
   <p>Are you sure you want to delete this beer?</p>
-  <button id="deleteBeer">Delete Beer</button>
+  <button id="deleteBeer" class="button">Delete Beer</button>
 </div>
