--- a/assets/scripts/templates/beer_listing.handlebars
+++ b/assets/scripts/templates/beer_listing.handlebars
@@ -26,6 +26,6 @@
     <li>No price available.</li>
   {{/if}}
 </ul>
-  <button class="openBeerUpdate" data-id="{{beer.id}}">Update</button>
-  <button class="deleteBeer" data-id="{{beer.id}}">Delete</button>
+  <button class="openBeerUpdate button" data-id="{{beer.id}}">Update</button>
+  <button class="deleteBeer button" data-id="{{beer.id}}">Delete</button>
 {{/each}}
