--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -15,6 +15,10 @@ body {
 }
 
 // NEW STUFF
+.fill {
+  min-height: 100%;
+  height: 100%;
+}
 .navbar {
    background-color: $accent-color;
    margin-bottom: 0;
