--- a/assets/scripts/templates/update_beer_form.handlebars
+++ b/assets/scripts/templates/update_beer_form.handlebars
@@ -2,27 +2,27 @@
 
   <div class="form-group">
     <label>Name:</label>
-    <input type="text" name="[beer][name]" placeholder="Name" class="form-control">
+    <input type="text" name="[beer][name]" placeholder="Name" class="form-control name">
   </div>
 
   <div class="form-group">
     <label>Brand:</label>
-    <input type="text" name="[beer][brand]" placeholder="Brand" class="form-control">
+    <input type="text" name="[beer][brand]" placeholder="Brand" class="form-control brand">
   </div>
 
   <div class="form-group">
     <label>Style:</label>
-    <input type="text" name="[beer][style]" placeholder="Style" class="form-control">
+    <input type="text" name="[beer][style]" placeholder="Style" class="form-control style">
   </div>
 
   <div class="form-group">
     <label>Alc Content:</label>
-    <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control">
+    <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control alc">
   </div>
 
   <div class="form-group">
     <label>Price:</label>
-    <input type="number" name="[beer][price]" placeholder="Price" class="form-control">
+    <input type="number" name="[beer][price]" placeholder="Price" class="form-control price">
   </div>
   <input type="submit" class="button btn btn-default" name="submit" value="Update Beer">
 
