--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,39 +9,39 @@ $accent-color: rgb(233, 29, 99);
 // rgb(233, 29, 99) pink
 // rgb(0, 144, 172) blue
 
+.container-fluid {
+  padding: 0;
+}
+
 body {
   background-color: $background-color;
   color: $font-color;
-}
-
-// NEW STUFF
-.fill {
-  height: 100%;
-  min-height: 100%;
+  overflow-x: hidden;
 }
 
 .navbar {
   background-color: $accent-color;
   border-radius: 0;
   margin-bottom: 0;
+  min-width: 100%;
+  // padding: 0;
  }
-
-// .navbar-inverse .navbar-brand:hover,
-// .navbar-inverse .navbar-brand:focus {
-//   background-color: transparent;
-//   color: white;
-//   font-size: 24px;
-//   font-weight: bold;
-// }
 
 .navbar-brand {
   color: white;
   font-size: 24px;
   font-weight: bold;
+  padding-left: 30px;
+  // padding-right: 15px;
 }
 
 .nav-item {
   color: white;
+}
+
+.login-dp-css {
+  padding-right: 30px;
+  padding-left: 15px;
 }
 
 h1 {
@@ -60,8 +60,15 @@ footer {
   background-color: $accent-color;
   clear: both;
   padding: 25px;
+  min-height: 100px;
  }
 
+.footer-text {
+  position: relative;
+  text-align: right;
+  margin-top: 75px;
+  padding-right: 20px;
+}
 .carousel-inner img {
   margin: auto;
   max-height: 240px;
@@ -80,6 +87,7 @@ footer {
   padding: 14px 14px 0;
   overflow: hidden;
   background-color: rgba(255,255,255,.8);
+  padding-right: 30px;
 }
 
 #login-dp .help-block{
@@ -121,6 +129,10 @@ footer {
 
 .change-password-dp-nav {
   display: none;
+  padding-left: 15px
+}
+.log-out-css {
+  padding-left: 15px;
 }
 #change-password-dp {
     min-width: 250px;
@@ -192,6 +204,9 @@ footer {
         background-color: inherit;
         border-top:0 none;
     }
+    .create-account-dp-css {
+      padding-left: 15px;
+    }
 }
 
 // OLD STUFF
@@ -227,6 +242,13 @@ input, select, textarea {
 }
 #addBeer {
   display: none;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.beer-list-div {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .beerListTitle {
   display: none;
@@ -236,7 +258,7 @@ input, select, textarea {
 //   margin-top: 20px;
 // }
 .updateBeerForm {
-  background-color: $accent-color;
+  // background-color: $accent-color;
 }
 .deleteBeer {
   margin: 10px;
