Bug fixes Changed alc min to 1 in add beer form Added min values to update beer form

--- a/assets/scripts/templates/update_beer_form.handlebars
+++ b/assets/scripts/templates/update_beer_form.handlebars
@@ -17,12 +17,12 @@
 
   <div class="form-group">
     <label>Alc Content:</label>
-    <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control alc">
+    <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control alc" min="1">
   </div>
 
   <div class="form-group">
     <label>Price:</label>
-    <input type="number" name="[beer][price]" placeholder="Price" class="form-control price">
+    <input type="number" name="[beer][price]" placeholder="Price" class="form-control price" min="1">
   </div>
   <input type="submit" class="button btn btn-default" name="submit" value="Update Beer">
 
