--- a/assets/scripts/templates/beer_listing.handlebars
+++ b/assets/scripts/templates/beer_listing.handlebars
@@ -2,7 +2,7 @@
 {{#each beers as |beer|}}
 <tr>
   <td class="col-xs-2" align="center" data-id="{{beer.id}}">
-    <a class="btn btn-default openBeerUpdate" data-id="{{beer.id}}" data-toggle="modal" data-target="#updateBeer"><em class="fa fa-pencil"></em></a>
+    <a class="btn btn-default openBeerUpdate" data-id="{{beer.id}}" data-toggle="modal" data-target="#updateBeerModal"><em class="fa fa-pencil"></em></a>
     <a class="btn btn-danger openDeleteBeerModal" data-id="{{beer.id}}" data-toggle="modal" data-target="#deleteBeerModal"><em class="fa fa-trash"></em></a>
   </td>
   <td class="col-xs-2" data-type="{{beer.name}}" data-id="{{beer.id}}">{{beer.name}}</td>
