Bug fixes Adjusted min-height of content divs Cleared account created msg on sign in Fixed login bug introduced by attempted combined sign in/up

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -248,6 +248,7 @@ input, select, textarea {
 
 .beer-list-div {
   display: none;
+  min-height: 550px;
 }
 
 .deleteBeer {
@@ -319,4 +320,7 @@ used to vertically center elements, may need modification if you're not using de
 
 .confirmDeleteMsg {
   color: black;
+}
+.three-across {
+  min-height: 385px;
 }
