Changed modal form label colors

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -324,3 +324,6 @@ used to vertically center elements, may need modification if you're not using de
 .three-across {
   min-height: 385px;
 }
+.modal_form {
+  color: $background-color;
+}
